--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="body-theme"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
