--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Test App</title>
+  <link rel="icon" href="../favicon.ico" type="image/x-icon"/>  
+  <title>Test App123</title>
 </head>
 
 <body>
