--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Nunito+Sans:ital,opsz,wght@1,6..12,300&family=Oswald&family=Playfair+Display+SC:wght@400;700&family=Roboto:wght@300&display=swap" rel="stylesheet">  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="../favicon.ico" type="image/x-icon"/>  
   <title>Test App123</title>
 </head>
